fix: primary white visibility

--- a/src/app/features/credential-issuance/components/credential-issuance/credential-issuance.component.scss
+++ b/src/app/features/credential-issuance/components/credential-issuance/credential-issuance.component.scss
@@ -134,7 +134,7 @@ mat-form-field.selector-field{
 
   .mat-mdc-raised-button[disabled], .mat-mdc-raised-button.mat-mdc-button-disabled.cancel-button{
     background-color: rgb(var(--primary-color-rgb) / 0.4);
-    color: $white;
+    color: var(--text-secondary);
   }
 }
 
