--- a/src/app/features/credential-issuance/components/power/issuance-power.component.scss
+++ b/src/app/features/credential-issuance/components/power/issuance-power.component.scss
@@ -105,7 +105,7 @@ h2.title{
 .bottom-alert{
   padding-top: 20px;
   height: 32px;
-  color: var(--primary-color);
+  color: var(--status-warning);
   font-style: italic;
 }
 
