--- a/src/app/features/credential-management/credential-management.component.scss
+++ b/src/app/features/credential-management/credential-management.component.scss
@@ -106,6 +106,7 @@
         &.admin-button{
           border-color: var(--primary-color);
           color: var(--primary-color);
+          background-color: var(--primary-contrast-color);
         }
       }
     }
@@ -204,8 +205,8 @@
 
   .toggle-searchbar-btn{
     margin-right: 10px;
-    --mdc-icon-button-icon-color: var(--primary-color);
-    color: var(--primary-color);
+    --mdc-icon-button-icon-color: var(---neutral-medium);
+    color: var(---neutral-medium);
   }
 
   .mat-mdc-button>.mat-icon{
